# DZ_WEB_7

./: Dockerfile  alembic.ini  docker-compose.yaml  hw06.db  main.py  my_select.py  pyproject.toml  requirements.txt  select-1.sql  select-10.sql  select-2.sql  select-3.sql  select-7.sql  select-9.sql
alembic/: env.py
database/: db.py  models.py
seeds/: contacts.py  grades.py  groups.py  init.py  subjects.py
