[tool.poetry]
name = "hw-7-web-main"
version = "0.1.0"
description = ""
authors = ["Andriy <127453425+Andriy22226@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.19.0"
alembic = "^1.12.0"
sqlalchemy = "^2.0.20"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
